# r0le

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  dummy.rs
.github/workflows/: docker-image.yml
src/: data.rs  event_handler.rs  lib.rs  main.rs  opts.rs
src/commands/: mod.rs
src/commands/reactionroles/: mod.rs  research CommandResult.txt  setup.rs
