[package]
name = "r0le"
version = "0.1.0"
authors = ["Eschryn <8217655+Eschryn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = "3.0.0-beta.2"
redis = { version = "0.21.1", features = ["tokio-comp", "r2d2", "connection-manager"] }
tokio = { version = "1.7", features = ["rt-multi-thread"] }
serenity = { version = "0.10.9", features = ["collector", "unstable_discord_api"] }
futures = "0.3"
thiserror = "1.0"
futures-util = "0.3.17"